# mt4_websocket_lib

./: CHANGELOG.md  CHANGELOG_ORDER_PARSING.md  Cargo.toml  README.md
docs/: ORDER_DATA_FLOW.md
examples/: error_test.rs  trade_test.rs
src/: api.rs  client.rs  crypto.rs  error.rs  lib.rs  protocol.rs  types.rs
